--- a/concourseUbutnu.yml
+++ b/concourseUbutnu.yml
@@ -40,14 +40,14 @@
   #- name: create user for postgresql
 
   - name: Create a PostgreSQL DB server
-    hosts: dbserver
+    hosts: all
     sudo: yes
     sudo_user: root
-    remote_user: ubuntu
+    remote_user: concourse
     vars_files:
-      db_user: dbusername
-      db_name: dbname
-      db_password: dbpassword
+      db_user: concourse
+      db_name: atc
+      #db_password: dbpassword
 
   #- name: creating db of postgresql
 
