--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -23,106 +23,105 @@
 
   #- name: Install postgresql
 
-  - name: Install PostgreSQL
-    command: sudo apt install postgresql postgresql-contrib -y
-    # apt: name={{ item }} update_cache=true state=installed
-    # with_items:
-    #   - postgresql
-    #   - postgresql-contrib
-    #   - libpq-dev
-    #   - python-psycopg2
-    # tags: packages
+  # - name: Install PostgreSQL
+  #   command: sudo apt install postgresql postgresql-contrib -y
+  #   # apt: name={{ item }} update_cache=true state=installed
+  #   # with_items:
+  #   #   - postgresql
+  #   #   - postgresql-contrib
+  #   #   - libpq-dev
+  #   #   - python-psycopg2
+  #   # tags: packages
 
-  - name: Enable postgresql
-    command: sudo systemctl enable postgresql
+  # - name: Enable postgresql
+  #   command: sudo systemctl enable postgresql
 
-  - name: Ensure the PostgreSQL service is running
-    service: name=postgresql state=started enabled=yes
+  # - name: Ensure the PostgreSQL service is running
+  #   service: name=postgresql state=started enabled=yes
 
-  - name: create user for postgresql
-    command: sudo -u postgres createuser concourse
+  # - name: create user for postgresql
+  #   command: sudo -u postgres createuser concourse
 
-  # - name: Create a PostgreSQL DB server
-  #   hosts: all
-  #   sudo: yes
-  #   sudo_user: root
-  #   remote_user: concourse
-  #   vars_files:
-  #     db_user: concourse
-  #     db_name: atc
-  #     db_password: dbpassword
+  # # - name: Create a PostgreSQL DB server
+  # #   hosts: all
+  # #   sudo: yes
+  # #   sudo_user: root
+  # #   remote_user: concourse
+  # #   vars_files:
+  # #     db_user: concourse
+  # #     db_name: atc
+  # #     db_password: dbpassword
 
-  - name: creating db of postgresql
-    command: sudo -u postgres createdb --owner=concourse atc
+  # - name: creating db of postgresql
+  #   command: sudo -u postgres createdb --owner=concourse atc
 
-  - name: Download Concourse
+  # - name: Download Concourse
 
-  #- name: Download foo.conf
-    get_url:
-      url: https://github.com/concourse/concourse/releases/download/v3.9.0/concourse_linux_amd64
-      dest: .
-     # mode: '0440'
+  # #- name: Download foo.conf
+  #   get_url:
+  #     url: https://github.com/concourse/concourse/releases/download/v3.9.0/concourse_linux_amd64
+  #     dest: .
+  #    # mode: '0440'
 
-  - name: Download fly
+  # - name: Download fly
 
-  #- name: Download foo.conf
-    get_url:
-      url: https://github.com/concourse/concourse/releases/download/v3.9.0/fly_linux_amd64
-      dest: .
-  # - name: Permission to executable
+  # #- name: Download foo.conf
+  #   get_url:
+  #     url: https://github.com/concourse/concourse/releases/download/v3.9.0/fly_linux_amd64
+  #     dest: .
+  # # - name: Permission to executable
 
-  # - name: Change file ownership, group and permissions
+  # # - name: Change file ownership, group and permissions
+  # #   file:
+  # #     path: /etc/foo.conf
+  # #     owner: foo
+  # #     group: foo
+  # #     mode: '0644'
+  #    #or
+  # - name: path of the folder
+  #   command: pwd
+  # - name: Changing perm to exacutable
+  #   file: dest=. mode=a+x 
+  # - name: Changing perm to exacutable
+  #   file: dest=. mode=a+x
+  # - name: Move concourse to folder
+
+  # #- name: Move foo to bar
+  #  # command: sudo mv . /usr/bin/concourse
+  #   copy: src=. dest=/usr/bin/concourse
+  # #- name: Move fly to folder
+
+  # - name: Move foo to bar
+  #   #command: sudo mv . /usr/bin/concourse
+  #   copy: src=. dest=/usr/bin/concourse
+  # - name: Make directory of concourse
+
+  # #- name: Creates directory
   #   file:
-  #     path: /etc/foo.conf
-  #     owner: foo
-  #     group: foo
-  #     mode: '0644'
-     #or
-  - name: path of the folder
-    command: pwd
-  - name: Changing perm to exacutable
-    file: dest=. mode=a+x 
-  - name: Changing perm to exacutable
-    file: dest=. mode=a+x
-  - name: Move concourse to folder
-
-  #- name: Move foo to bar
-   # command: sudo mv . /usr/bin/concourse
-    copy: src=. dest=/usr/bin/concourse
-  #- name: Move fly to folder
-
-  - name: Move foo to bar
-    #command: sudo mv . /usr/bin/concourse
-    copy: src=. dest=/usr/bin/concourse
-  - name: Make directory of concourse
-
-  #- name: Creates directory
-    file:
-      path: /etc/concourse
-      state: directory
+  #     path: /etc/concourse
+  #     state: directory
 
 
-  - name: create ssh keys
+  # - name: create ssh keys
 
-  #- name: Move foo to bar
-    command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/tsa_host_key
-  - name: Move foo to bar
-    command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/worker_key
-  - name: Move foo to bar
-    command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/session_signing_key
+  # #- name: Move foo to bar
+  #   command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/tsa_host_key
+  # - name: Move foo to bar
+  #   command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/worker_key
+  # - name: Move foo to bar
+  #   command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/session_signing_key
 
 
-  - name: copy keys to authorized
+  # - name: copy keys to authorized
   
-  #- name: Move foo to bar
-    command: cp /etc/concourse/worker_key.pub /etc/concourse/authorized_worker_keys
+  # #- name: Move foo to bar
+  #   command: cp /etc/concourse/worker_key.pub /etc/concourse/authorized_worker_keys
 
 
   - name: create web environment with some data
 
   #- name: Ansible create file with content example
-    copy:
-      dest: "/etc/concourse/web_environment"
+    copy:   
       content: |
         CONCOURSE_SESSION_SIGNING_KEY=/etc/concourse/session_signing_key
         CONCOURSE_TSA_HOST_KEY=/etc/concourse/tsa_host_key
@@ -132,19 +131,18 @@
         CONCOURSE_BASIC_AUTH_USERNAME=admin
         CONCOURSE_BASIC_AUTH_PASSWORD=secret
         CONCOURSE_EXTERNAL_URL=http://54.201.83.109:8080
-
+      dest: /etc/concourse/web_environment
 
   #- name: create worker environment with data
 
   - name: Ansible create file with content example
-    copy:
-      dest: "/etc/concourse/worker_environment"
+    copy:  
       content: |
         CONCOURSE_WORK_DIR=/var/lib/concourse
         CONCOURSE_TSA_WORKER_PRIVATE_KEY=/etc/concourse/worker_key
         CONCOURSE_TSA_PUBLIC_KEY=/etc/concourse/tsa_host_key.pub
         CONCOURSE_TSA_HOST=127.0.0.1
-
+      dest: "/etc/concourse/worker_environment"
 
   - name: Create concourse user
 
@@ -170,7 +168,6 @@
 
   #- name: Ansible create file with content example
     copy:
-      dest: "/etc/systemd/system/concourse-web.service"
       content: |
         [Unit]
         Description=Concourse CI web process (ATC and TSA)
@@ -184,12 +181,11 @@
 
         [Install]
         WantedBy=multi-user.target
-
+      dest: /etc/systemd/system/concourse-web.service
   - name: create worker.service
 
   #- name: Ansible create file with content example
     copy:
-      dest: "/etc/systemd/system/concourse-worker.service"
       content: |
         [Unit]
         Description=Concourse CI worker process
@@ -203,7 +199,7 @@
 
         [Install]
         WantedBy=multi-user.target
-
+      dest: /etc/systemd/system/concourse-worker.service
   - name: start web and worker
 
   #- name: Permission mode
