--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -122,7 +122,7 @@
 
   #- name: Ansible create file with content example
     copy:   
-      content: |
+      content: "
         CONCOURSE_SESSION_SIGNING_KEY=/etc/concourse/session_signing_key
         CONCOURSE_TSA_HOST_KEY=/etc/concourse/tsa_host_key
         CONCOURSE_TSA_AUTHORIZED_KEYS=/etc/concourse/authorized_worker_keys
@@ -130,7 +130,7 @@
 
         CONCOURSE_BASIC_AUTH_USERNAME=admin
         CONCOURSE_BASIC_AUTH_PASSWORD=secret
-        CONCOURSE_EXTERNAL_URL=http://54.201.83.109:8080
+        CONCOURSE_EXTERNAL_URL=http://54.201.83.109:8080"
       dest: /etc/concourse/web_environment
 
   #- name: create worker environment with data
