--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -133,21 +133,26 @@
   # #- name: Move foo to bar
   #   command: cp /etc/concourse/worker_key.pub /etc/concourse/authorized_worker_keys
 
+  - name: Ansible create file with content example
+    copy:
+      dest: "/etc/concourse/remote_server.txt"
+      content: |
+        dog1
+        tiger
 
- # - name: create web environment with some data
+  - name: create web environment with some data
 
   #- name: Ansible create file with content example
-  - copy:     
+    copy:     
       dest: /etc/concourse/web_environment
-      content: "{{ mytext }}"
+      content: 'hi'
 
-
-  #- name: create worker environment with data
-
+  - name: create worker environment with data
+  
   #- name: Ansible create file with content example
-  - copy:  
+    copy:  
       dest: "/etc/concourse/worker_environment"
-      content: "{{ mytext2 }}"
+      content: 'hi1'
       become: true
 
   - name: Create concourse user
