--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -159,7 +159,11 @@
   #- name: Ansible create file with content example
     copy:  
       dest: "/etc/concourse/worker_environment"
-      content: 'hi1'
+      content:  |
+        CONCOURSE_WORK_DIR=/var/lib/concourse
+        CONCOURSE_TSA_WORKER_PRIVATE_KEY=/etc/concourse/worker_key
+        CONCOURSE_TSA_PUBLIC_KEY=/etc/concourse/tsa_host_key.pub
+        CONCOURSE_TSA_HOST=127.0.0.1
 
 
   - name: Create concourse user
