--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -68,15 +68,15 @@
   #     db_name: atc
   #     db_password: dbpassword
 
-  - name: creating db of postgresql
-    command: sudo -u postgres createdb --owner=concourse atc
+  # - name: creating db of postgresql
+  #   command: sudo -u postgres createdb --owner=concourse atc
 
   - name: Download Concourse
 
   #- name: Download foo.conf
     get_url:
       url: https://github.com/concourse/concourse/releases/download/v3.9.0/concourse_linux_amd64
-      dest: .
+      dest: /usr/bin/concourse1
      # mode: '0440'
 
   - name: Download fly
@@ -84,7 +84,7 @@
   #- name: Download foo.conf
     get_url:
       url: https://github.com/concourse/concourse/releases/download/v3.9.0/fly_linux_amd64
-      dest: .
+      dest: /usr/bin/concourse1
   # - name: Permission to executable
 
   # - name: Change file ownership, group and permissions
@@ -97,19 +97,19 @@
   - name: path of the folder
     command: pwd
   - name: Changing perm to exacutable
-    file: dest=. mode=a+x 
+    file: dest=/usr/bin/concourse1 mode=a+x 
   - name: Changing perm to exacutable
-    file: dest=. mode=a+x
+    file: dest=/usr/bin/concourse1 mode=a+x
   - name: Move concourse to folder
 
   #- name: Move foo to bar
    # command: sudo mv . /usr/bin/concourse
-    copy: src=. dest=/usr/bin/concourse
+    copy: src=/usr/bin/concourse1 dest=/usr/bin/concourse
   #- name: Move fly to folder
 
   - name: Move foo to bar
     #command: sudo mv . /usr/bin/concourse
-    copy: src=. dest=/usr/bin/concourse
+    copy: src=/usr/bin/concourse1 dest=/usr/bin/concourse
   - name: Make directory of concourse
 
   #- name: Creates directory
