copy changed to mv at 113 and so

--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -96,24 +96,29 @@
      #or
   - name: path of the folder
     command: pwd
+    
   - name: Changing perm to exacutable
-    file: dest=/usr/bin/concourse1/concourse_linux_amd64 mode=a+x 
-    remote_src: yes
+    file: 
+     path: /usr/bin/concourse1/concourse_linux_amd64 
+     mode: a+x 
+    
   - name: Changing perm to exacutable
-    file: dest=/usr/bin/concourse1/fly_linux_amd64 mode=a+x
-    remote_src: yes
+    file: 
+     path: /usr/bin/concourse1/fly_linux_amd64 
+     mode: a+x
+    
   - name: Move concourse to folder
 
   #- name: Move foo to bar
-   # command: sudo mv . /usr/bin/concourse
-    copy: src=/usr/bin/concourse1/concourse_linux_amd64 dest=/usr/bin/concourse
-    remote_src: yes
+    command: sudo mv /usr/bin/concourse1/concourse_linux_amd64 /usr/bin/concourse
+    #copy: src=/usr/bin/concourse1/concourse_linux_amd64 dest=/usr/bin/concourse
+  
   #- name: Move fly to folder
 
   - name: Move foo to bar
-    #command: sudo mv . /usr/bin/concourse
-    copy: src=/usr/bin/concourse1/fly_linux_amd64 dest=/usr/bin/fly
-    remote_src: yes
+    command: sudo mv /usr/bin/concourse1/fly_linux_amd64 /usr/bin/fly
+    #copy: src=/usr/bin/concourse1/fly_linux_amd64 dest=/usr/bin/fly
+    
   - name: Make directory of concourse
 
   #- name: Creates directory
