--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -71,13 +71,19 @@
   # - name: creating db of postgresql
   #   command: sudo -u postgres createdb --owner=concourse atc
 
+  - shell: pwd
+    register: shell_result
+
+  - debug:
+      var: shell_result.stdout_lines
+      
   - name: Download Concourse
 
   #- name: Download foo.conf
     get_url:
       url: https://github.com/concourse/concourse/releases/download/v3.9.0/concourse_linux_amd64
       dest: /usr/bin/concourse1
-     # mode: '0440'
+      mode: u+x
 
   - name: Download fly
 
@@ -85,6 +91,8 @@
     get_url:
       url: https://github.com/concourse/concourse/releases/download/v3.9.0/fly_linux_amd64
       dest: /usr/bin/concourse1
+      mode: u+x
+
   # - name: Permission to executable
 
   # - name: Change file ownership, group and permissions
