--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -86,9 +86,6 @@
       mode: u+x
 
 
-  - debug:
-      var: dest.stdout_lines
-
   - name: Download fly
 
   #- name: Download foo.conf
@@ -138,11 +135,17 @@
   #     path: /etc/concourse
   #     state: directory
     command: mkdir /etc/concourse
+    register: ssh1
+
+  - debug: ssh1.stdout_lines
 
   - name: create ssh keys
 
   #- name: Move foo to bar
     command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/tsa_host_key
+    register: ssh
+
+  - debug: ssh.stdout_lines
   - name: Move foo to bar
     command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/worker_key
   - name: Move foo to bar
