--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -144,15 +144,15 @@
   - name: create ssh keys
 
   #- name: Move foo to bar
-    command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/tsa_host_key
+    command: sudo ssh-keygen -t rsa -q -N '' -f /etc/concourse/tsa_host_key
     register: ssh
 
   - debug: 
       var: ssh.stdout_lines
   - name: Move foo to bar
-    command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/worker_key
+    command: sudo ssh-keygen -t rsa -q -N '' -f /etc/concourse/worker_key
   - name: Move foo to bar
-    command: ssh-keygen -t rsa -q -N '' -f /etc/concourse/session_signing_key
+    command: sudo ssh-keygen -t rsa -q -N '' -f /etc/concourse/session_signing_key
 
 
   - name: copy keys to authorized
