--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -141,7 +141,7 @@
   # - debug: 
   #     var: ssh1.stdout_lines
 
-  - name: create ssh keys
+  - name: create ssh tsa keys
 
   #- name: Move foo to bar
     command: sudo ssh-keygen -t rsa -q -N '' -f /etc/concourse/tsa_host_key
@@ -151,10 +151,14 @@
 
   - debug: 
       var: ssh.stdout_lines
-  - name: Move foo to bar
+  - name: create ssh worker keys
     command: sudo ssh-keygen -t rsa -q -N '' -f /etc/concourse/worker_key
-  - name: Move foo to bar
+    args:
+      creates: /etc/concourse/worker_key
+  - name: create ssh session_signing_key
     command: sudo ssh-keygen -t rsa -q -N '' -f /etc/concourse/session_signing_key
+    args:
+      creates: /etc/concourse/session_signing_key
 
 
   - name: copy keys to authorized
