--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -55,8 +55,8 @@
   - name: Ensure the PostgreSQL service is running
     service: name=postgresql state=started enabled=yes
 
-  - name: create user for postgresql
-    command: sudo -u postgres createuser concourse
+  # - name: create user for postgresql
+  #   command: sudo -u postgres createuser concourse
 
   # - name: Create a PostgreSQL DB server
   #   hosts: all
@@ -68,14 +68,20 @@
   #     db_name: atc
   #     db_password: dbpassword
 
-  - name: creating db of postgresql
-    command: sudo -u postgres createdb --owner=concourse atc
+  # - name: creating db of postgresql
+  #   command: sudo -u postgres createdb --owner=concourse atc
 
   - shell: pwd
     register: shell_result
 
   - debug:
       var: shell_result.stdout_lines
+
+  - name: ansible create directory example
+    file:
+      path: /usr/bin/concourse
+      state: directory
+      become: root
 
   - name: Download Concourse
 
