--- a/ConcourseAnsCmd1.yml
+++ b/ConcourseAnsCmd1.yml
@@ -79,7 +79,7 @@
 
   - name: ansible create directory example
     file:
-      path: /usr/bin/concourse
+      path: /usr/bin
       state: directory
       remote_src: yes
 
@@ -88,8 +88,14 @@
   #- name: Download foo.conf
     get_url:
       url: https://github.com/concourse/concourse/releases/download/v3.9.0/concourse_linux_amd64
-      dest: /usr/bin/concourse/concourse
+      dest: /usr/bin/concourse
       mode: u+x
+
+  - shell: cocourse -version
+    register: shell_result4
+
+  - debug:
+      var: shell_result4.stdout_lines
 
 
   - name: Download fly
@@ -97,7 +103,7 @@
   #- name: Download foo.conf
     get_url:
       url: https://github.com/concourse/concourse/releases/download/v3.9.0/fly_linux_amd64
-      dest: /usr/bin/concourse/fly
+      dest: /usr/bin/fly
       mode: u+x
 
   # - name: Permission to executable
@@ -205,7 +211,7 @@
         CONCOURSE_POSTGRES_SOCKET=/var/run/postgresql
         CONCOURSE_BASIC_AUTH_USERNAME=admin
         CONCOURSE_BASIC_AUTH_PASSWORD=secret
-        CONCOURSE_EXTERNAL_URL=http://34.219.160.248:8080
+        CONCOURSE_EXTERNAL_URL=http://54.201.83.109:8080
 
   - name: create worker environment with data
   
